Updated Resume with information about the Grade Entry System

--- a/ResumeSource/cv_10.tex
+++ b/ResumeSource/cv_10.tex
@@ -19,7 +19,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
+\documentclass[print]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
 
 % \addbibresource{bibliography.bib} % Specify the bibliography file to include publications
 
@@ -32,16 +32,17 @@
 %----------------------------------------------------------------------------------------
 
 \begin{aside} % In the aside, each new line forces a line break
-\section{address}\small
+\section{Address}\small
 Calle Holy Cross 374
 Reparto Universitario
 San Juan, PR 00926
-\section{contact}
-\footnotesize cel: +1 (787) 662-4474
+\section{Contact}
 \href{mailto:c.feliciano2009@gmail.com}{\footnotesize c.feliciano2009@gmail.com}
 \href{https://github.com/carloscheddar}{\footnotesize github.com/carloscheddar}
-% \section{languages}
-% english \& spanish
+\footnotesize cel: +1 (787) 662-4474
+\section{Languages}
+$\bullet$ English \
+$\bullet$ Spanish
 % \section{programming}
 % {\color{red} $\varheartsuit$} JavaScript
 % Python, C++, PHP
@@ -52,16 +53,16 @@ San Juan, PR 00926
 %	Profile
 %----------------------------------------------------------------------------------------
 
-\section{profile}
+\section{Profile}
 
 %------------------------------------------------
 \begin{itemize}\small
+\item Experience with Backend Web Development including Node.js, Ruby on Rails and Django
 \item Proficient use of Git, Github, Heroku, Openshift, Azure and other Cloud
 Platforms
-\item Experience with Backend Web Development including Ruby on Rails and Django
 \item Proficient programmer in Python, C++, JavaScript, Ruby, SQL, Scheme
 \item Experience installing hardware and software
-\item Skilled with UNIX based systems
+\item Skilled with UNIX based systems \\
 \end{itemize}
 %------------------------------------------------
 
@@ -69,9 +70,18 @@ Platforms
 %	Experience
 %----------------------------------------------------------------------------------------
 
-\section{experience}
+\section{Experience}
 
 \begin{entrylist}
+%------------------------------------------------
+\entry
+{\footnotesize Winter 2013}
+{UPR Grade Entry System at University of Puerto Rico}
+{San Juan, Puerto Rico}
+{\small \emph{Backend Web Developer and System Administrator} \\
+\small Co-Created the Web based Grade Entry System for the Río Piedras campus, prior to this it
+it was done by hand. \\
+\small {\bf Source:} \href{https://github.com/crzrcn/UPRRP-Grades-Entry-System}{github.com/crzrcn/UPRRP-Grades-Entry-System}}
 %------------------------------------------------
 \entry
 {\footnotesize October 2013}
@@ -80,7 +90,7 @@ Platforms
 {\small \emph{1\textsuperscript{st} Place} \\
 \small My team participated and won the San Juan Startup Weekend by making Ride Surfing, an open source
 carpooling platform. \\
-\small {\bf Demo:} \href{http://ridesurfing.herokuapp.com/}{http://ridesurfing.herokuapp.com/}}
+\small {\bf Demo:} \href{http://ridesurfing.herokuapp.com/}{ridesurfing.herokuapp.com}}
 %------------------------------------------------
 \entry
 {\footnotesize Summer 2013}
@@ -96,7 +106,7 @@ carpooling platform. \\
 {San Juan, Puerto Rico}
 {\small \emph{Independent Web Developer} \\
 \small Created a website where we modified open source games to dynamically save
-data in a PostgreSQL database using Ruby on Rails and deployed on Heroku \\
+data in a PostgreSQL database using Ruby on Rails and deployed on Heroku. \\
 \small {\bf Source:} \href{https://github.com/carloscheddar/WebGame}{github.com/carloscheddar/WebGame}}
 %------------------------------------------------
 \entry
@@ -104,7 +114,7 @@ data in a PostgreSQL database using Ruby on Rails and deployed on Heroku \\
 {Computer Research Lab at University of Puerto Rico}
 {San Juan, Puerto Rico}
 {\small \emph{Software Developer} \\
-\small Parallelized algorithms using Cilk to increase preformance of a linear system solver}
+\small Parallelized algorithms using Cilk to increase preformance of a linear system solver.}\\
 %------------------------------------------------
 \end{entrylist}
 
@@ -112,11 +122,11 @@ data in a PostgreSQL database using Ruby on Rails and deployed on Heroku \\
 %	Technical Experience
 %----------------------------------------------------------------------------------------
 
-\section{technical experience}
+\section{Technical Experience}
 \begin{itemize}\small
-\item Developed the backend of several websites using Ruby on Rails and Django
+\item Developed the backend of several websites using Sails.js, Express, Ruby on Rails and Django
 \item Developed a Distributed File System for a class project in Python and MySQL
-\item Open-Sourced scripts \& tools mostly in Python, Bash, C++ and Ruby
+\item Open-Sourced scripts \& tools mostly in Node, Python, Bash, C++ and Ruby\\
 \end{itemize}
 
 
@@ -124,26 +134,26 @@ data in a PostgreSQL database using Ruby on Rails and deployed on Heroku \\
 %	Languages, Frameworks & Tools SECTION
 %----------------------------------------------------------------------------------------
 
-\section{languages, frameworks \& tools}
+\section{Languages, Frameworks \& Tools}
 
 \setlength{\tabcolsep}{20pt}
 
 \small
 \begin{tabular}{lllll}
-    Python   & Ruby           & Node.js    & HTML   & Angular.js \\
-    Django   & Ruby on Rails  & Git        & CSS    & Sails.js   \\
-    mongoDB  & C/C++          & JavaScript & jQuery & PostgreSQL
+    Python   & Ruby           & Git    & jQuery   & Sails.js \\
+    Django   & C/C++  & Node.js        & HTML/CSS    & Angular.js   \\
+    mongoDB  & Ruby on Rails          & JavaScript & CoffeeScript & PostgreSQL
 \end{tabular}
 
-% ---------------------------------------------------------------------------------------
-% Recent Activities SECTION
-%----------------------------------------------------------------------------------------
+% % ---------------------------------------------------------------------------------------
+% % Recent Activities SECTION
+% %----------------------------------------------------------------------------------------
 
-\section{recent activities}
+% \section{recent activities}
 
-\begin{itemize}\small
-\item Attended the Puerto Rico TechSummit where I created Receptionist, a web app that lets businesses display their schedules and users can make bookings based on the business calendar. (June 2013)
-\item Took part of HackPR, Mayagüez, Puerto Rico's Second Official Hackathon (March 2013)
-\end{itemize}
+% \begin{itemize}\small
+% \item Attended the Puerto Rico TechSummit where I created Receptionist, a web app that lets businesses display their schedules and users can make bookings based on the business calendar. (June 2013)
+% \item Took part of HackPR, Mayagüez, Puerto Rico's Second Official Hackathon (March 2013)
+% \end{itemize}
 
 \end{document}
